# cdfBot

./: .gitignore  .pdm-python  README.md  config.toml.sample  main.py  pyproject.toml
config/module/: eroero_saver.jsonc
modules/EroEroSaver/: EroEroSaver.py
modules/access_control/: access_control.py
modules/eroero_saver/: EroEroSaver.py  EroeroSaverConfig.py
plugins/media_parser/: __init__.py  _errors.py  _s3_updater.py  db_import_from_folder.py  media_parser_config.py  media_sql_helper.py
scripts/: db_import_from_folder.py  media_db_import_from_folder.py
secrets/: credential.jsonc
