[project]
name = "cdfBot"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "cannedfish", email = "cannedfishsan@gmail.com"},
]
dependencies = [
    "alicebot>=0.10.0",
    "httpx>=0.27.0",
    "boto3>=1.39.16",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
